# turbotrack

./: .clang-format  .gitignore  CMakeLists.txt  License.txt  Readme.md
include/: turbotrack.hpp
src/: maths.hpp  turbotrack.cpp  turbotrack_eigen.cpp  turbotrack_glm.cpp
